[metadata]
# replace with your username:
name = pelican-markdown-image
version = attr: pelican.plugins.mdimage.__version__
url = https://github.com/cjc7373/pelican-markdown-image
author = cjc7373
author_email = niuchangcun@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A plugin for pelican to use native markdown image syntax
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
